# BecomeChief_Rev17062024

./: .gitignore  CMakeLists.txt  token.txt
Current/VulpeculaEngine/: .clang-format  CMakeLists.txt  main.cpp
Current/VulpeculaEngine/.cache/clangd/index/: Core.cpp.EFA338114D97D63D.idx  Core.hpp.E286F6651BFEB467.idx  main.cpp.71395E390FBE717F.idx
Current/VulpeculaEngine/src/Core/: Core.cpp  Core.hpp
Current/VulpeculaEngine/src/CoreMetrics/: CoreMetrics.hpp
Current/VulpeculaEngine/src/ECS/Component/: Component.cpp  Component.hpp
Current/VulpeculaEngine/src/ECS/Entity/: Entity.cpp  Entity.hpp
Current/VulpeculaEngine/src/ECS/System/: System.cpp  System.hpp
Current/VulpeculaEngine/src/ECS/SystemsDictionary/: SystemsDictionary.hpp
Current/VulpeculaEngine/src/ECS/SystemsManager/: SystemsManager.cpp  SystemsManager.hpp
Current/VulpeculaEngine/src/Systems/Input/: InputSystem.cpp  InputSystem.hpp
Current/VulpeculaEngine/src/Systems/Input/Facade/: InputSystemFacade.cpp  InputSystemFacade.hpp
Current/VulpeculaEngine/src/Systems/Rendering/Eraser/: RenderingEraserSystem.cpp  RenderingEraserSystem.hpp
Deprecated/: .gitignore  CMakeLists.txt
Deprecated/Game/src/: main.c
Deprecated/Game/src/game_boot/: game_boot.c
Deprecated/Game/src/game_tick/: game_tick.c
Deprecated/VulpeculaEngine/docs/ui/layout/: DOC_LAYOUT.MD
Deprecated/VulpeculaEngine/src/camera/: camera.c  camera.h
Deprecated/VulpeculaEngine/src/common/: common.h
Deprecated/VulpeculaEngine/src/darray/: darray.h
Deprecated/VulpeculaEngine/src/defs/: defs.h
Deprecated/VulpeculaEngine/src/dmap/: dmap.h
Deprecated/VulpeculaEngine/src/engine/: engine.c  engine.h  engine_defs.h
Deprecated/VulpeculaEngine/src/gui/layout/: layout.c  layout.h
Deprecated/VulpeculaEngine/src/gui/style/: style.h
Deprecated/VulpeculaEngine/src/gui/tick/: tick.c
Deprecated/VulpeculaEngine/src/gui/widget/: widget.c
Deprecated/VulpeculaEngine/src/keyboard/: keyboard.h
Deprecated/VulpeculaEngine/src/math/: fmath.c  frandom.h
Deprecated/VulpeculaEngine/src/math/noise/: noise.c  noise.h
Deprecated/VulpeculaEngine/src/math/noise/perlin/: perlin.c  perlin.h
Deprecated/VulpeculaEngine/src/memory/: memory.c  memory.h
Deprecated/VulpeculaEngine/src/mouse/: mouse.h
Deprecated/VulpeculaEngine/src/sprite/: sprite.h
Deprecated/VulpeculaEngine/src/texture/: texture.h
Game/src/: main.c
Game/src/game_boot/: game_boot.c  game_boot.h
Game/src/game_tick/: game_tick.c  game_tick.h
VulpeculaEngine/: CmakeLists.txt
VulpeculaEngine/docs/perlin/: DOC_PERLIN.MD
VulpeculaEngine/docs/ui/layout/: DOC_LAYOUT.MD
VulpeculaEngine/src/benchmark/: time_benchmark.h
VulpeculaEngine/src/camera/: camera.c  camera_defs.h
VulpeculaEngine/src/common/: common.c  common.h
VulpeculaEngine/src/darray/: darray.c  darray.h
VulpeculaEngine/src/defs/: defs.h
VulpeculaEngine/src/engine/: engine.c  engine.h  engine_defs.h
VulpeculaEngine/src/gui/layout/: layout.c  layout.h
VulpeculaEngine/src/gui/style/: style.h
VulpeculaEngine/src/gui/tick/: tick.c  tick.h
VulpeculaEngine/src/gui/widget/: widget.c  widget.h
VulpeculaEngine/src/math/: fmath.c  fmath.h  frandom.c
VulpeculaEngine/src/math/noise/: noise.c  noise.h
VulpeculaEngine/src/math/noise/perlin/: perlin.c  perlin.h
VulpeculaEngine/src/math/noise/simplex/: perlin.c  perlin.h
VulpeculaEngine/src/memory/: memory.h
VulpeculaEngine/src/mouse/: mouse.h
VulpeculaEngine/src/sprite/: sprite.h
VulpeculaEngine/src/texture/: texture.c  texture.h  texture_defs.h
dev_tools/python/: distrubution_visualizer.py
